--- a/404.html
+++ b/404.html
@@ -1,28 +1,31 @@
 <html>
 <head>
 
-<title>404!</title>
+<title>404 Not Found :-(</title>
 
+<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
+    <style>
+      html {
+        font-family: 'Patrick Hand', cursive;
+        font-size: 20px;
+	text-shadow: 0px 0px 15px #ffa500;
+	text-align: center;
+        word-wrap: break-word;
+        
+      }
+    </style>
 </head>
 
-<body bgcolor=#000000 text=#FFFFFF>
-
-
+<body bgcolor=#000000 text=#FFA500 vlink=#FFA500 alink=#FFA500 link=#FFA500>
 
 
 <center>
-<br>
-<br>
-Surprise... there's fucking nothing!
+<h1>Surprise... there's nothing here!</h1>
 <br>
 <br>
 <img src="/data/404.jpg">
-<br>
-<br>
-Wait for it...
 </center>
-
-
+<br>Hold on, redirecting...
 <meta http-equiv="refresh" content="5;url=http://www.jawe.pw/" />
 
 </body>
