--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>VERY WELL</title>
+<title>Popular Memes And Nice Mimicking/title>
 <link rel="stylesheet" href="stylesheet.css" />
 </head>
 <body bgcolor="black">
