--- a/404.html
+++ b/404.html
@@ -1,32 +1,27 @@
+<!doctype html>
 <html>
+
 <head>
+    <meta charset="utf-8">
+    <title>404 Not Found</title>
 
-<title>404 Not Found :-(</title>
-
-<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
-    <style>
-      html {
-        font-family: 'Patrick Hand', cursive;
-        font-size: 20px;
-	text-shadow: 0px 0px 15px #ffa500;
-	text-align: center;
-        word-wrap: break-word;
-        
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="scripts/style.css">
+    <script type="text/javascript" src="scripts/countdown.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
-<body bgcolor=#000000 text=#FFA500 vlink=#FFA500 alink=#FFA500 link=#FFA500>
+<body>
+    <div class="verticalcenter">
+        <center>
+            <div class="big">Damn, this place is empty.</div>
+            <br>
+            <br>
+            <div class="medium">
+                <div id="countDown"></div>
+            </div>
 
-
-<center>
-<h1>Surprise... there's nothing here!</h1>
-<br>
-<br>
-<img src="/data/404.jpg">
-</center>
-<br>Hold on, redirecting...
-<meta http-equiv="refresh" content="5;url=http://www.jawe.pw/" />
-
+        </center>
+    </div>
 </body>
+
 </html>
