--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
 
                                     <div class="construction1"></div>
                                     <div class="footertext">
-                                        © 2015 ᴊawe || Website under construction</div>
+                                       using OnePageScroller.js by Pete R.</div>
                                 </div>
-
                             </div>
                         </div>
                         <div>
