--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                                     <div class="construction1"></div>
                                     <div class="footertext">
-                                        using OnePageScroller.js by Pete R.</div>
+                                        OnePageScroller.js by Pete R. || Page fade-in by Roko C.</div>
                                 </div>
                             </div>
                         </div>
