cross-browser support

--- a/index.html
+++ b/index.html
@@ -39,68 +39,55 @@
   }
   document.addEventListener('DOMContentLoaded', loadbar, false);
 }());
-
     </script>
 </head>
 
 <body>
-                    <div id="overlay">
-                        <div id="progstat"></div>
-                    </div>
+    <div id="overlay">
+        <div id="progstat"></div>
+    </div>
     <div class="wrapper">
         <div class="main">
             <section class="page1">
                 <div class="background"></div>
                 <div class="page_container">
+                    <div class="verticalcenter">
+                        <div class="big"><b>J</b>awe's <b>A</b>rchive</div>
 
-                    <div class="outer">
-                        <div class="middle">
-                            <div class="inner">
-                                <br>
-                                <br>
-                                <br>
-                                <div class="big"><b>J</b>awe's <b>A</b>rchive</div>
+                        <br>
+                        <img src="data/images/logo.png" width="165" height="165">
+                        <br>
+                        <br>
+                        <div class="small">
+                            Welcome!
+                            <br>
+                            <br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction stories
+                            I collected.
+                            <br>I take no credit for the content you see on here, all rights belong to their respective owners,
+                            yada yada.
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
 
-                                <br>
-                                <img id="logo" src="data/images/logo.png" width="165" height="165">
-                                <br>
-                                <br>
-                                <br>
-                                <br>
-                                <br>
-                                <br>
-                                <div class="small">
-                                    Welcome!
-                                    <br>
-                                    <br>On here you can find a whole lot of Terminator: The Sarah Connor Chronicles FanFiction
-                                    stories I collected.
-                                    <br>I take no credit for the content you see on here, all rights belong to their respective
-                                    owners, yada yada.
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-
-                                    <br>
-                                    <br>
-                                </div>
-                                <div class="medium">You can find the bookshelf on the next page.</div>
-                                <a onclick="document.getElementById('x2').click();">
-                                    <div id="footerlink">
-                                        <div class="jumppage">
-                                            <div class="medium">Go down</div>
-                                        </div>
-                                </a>
-
-
-
-                                </div>
-                            </div>
+                            <br>
+                            <br>
                         </div>
+                        <div class="medium">You can find the bookshelf on the next page.</div>
                     </div>
+                    <a onclick="document.getElementById('x2').click();">
+                        <div id="footerlink">
+                            <div class="jumppage">
+                                <div class="medium">Go down</div>
+                            </div>
+                    </a>
 
+
+
+                    </div>
                 </div>
+
 
 
             </section>
@@ -109,111 +96,106 @@
                 <div class="background2"></div>
                 <div class="page_container">
 
-                    <div class="outer">
-                        <div class="middle">
-                            <div class="inner">
 
 
-                                <a onclick="document.getElementById('x1').click();">
-                                    <div id="headerlink">
-                                        <div class="jumppage">
-                                            <div class="medium">Go up</div>
-                                        </div>
-                                    </div>
 
-                                </a>
+                    <a onclick="document.getElementById('x1').click();">
+                        <div id="headerlinktop">
 
-                                <br>
-                                <br>
-                                <div class="big"><b>B</b>ookshelf</div>
-                                <br>
-                                <br>
-
-                                <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
-                                    <div class="child">
-                                        The Secret Diary
-                                        <br>Of
-                                        <br>Cameron Baum
-                                        <br>
-                                        <br>by Pjazz
-                                        <br>
-                                        <br> Status:
-                                        <div class="orange">In progress</div>
-                                    </div>
-                                </a>
-
-                                <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
-                                    <div class="child">
-                                        Born To
-                                        <br>Fight
-                                        <br>
-                                        <br>
-                                        <br>by River2027
-                                        <br>
-                                        <br> Status:
-                                        <div class="green">Completed</div>
-                                    </div>
-                                </a>
-
-
-                                <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
-                                    <div class="child">
-                                        I Love You
-                                        <br>Too
-                                        <br>
-                                        <br>
-                                        <br>by King Steve
-                                        <br>
-                                        <br> Status:
-                                        <div class="green">Completed</div>
-                                    </div>
-                                </a>
-                                <a onclick="document.getElementById('x3').click();">
-                                    <div id="footerlink">
-                                        <div class="jumppage">
-                                            <div class="medium">Go down</div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-
+                            <div class="medium">Go up</div>
                         </div>
+
+                    </a>
+
+                    <div class="verticalcenter">
+                        <br>
+                        <br>
+                        <div class="big"><b>B</b>ookshelf</div>
+                        <br>
+                        <br>
+
+                        <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
+                            <div class="child">
+                                The Secret Diary
+                                <br>Of
+                                <br>Cameron Baum
+                                <br>
+                                <br>by Pjazz
+                                <br>
+                                <br> Status:
+                                <div class="orange">In progress</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
+                            <div class="child">
+                                Born To
+                                <br>Fight
+                                <br>
+                                <br>
+                                <br>by River2027
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+
+                        <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+                            <div class="child">
+                                I Love You
+                                <br>Too
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
                     </div>
+                    <a onclick="document.getElementById('x3').click();">
+                        <div id="footerlink">
+                            <div class="jumppage">
+                                <div class="medium">Go down</div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
+
+
             </section>
 
             <section class="page3">
                 <div class="page_container">
-                    <div class="background3"></div>
-                    <div class="outer">
-                        <div class="middle">
-                            <div class="inner">
-
-                                <a onclick="document.getElementById('x2').click();">
-                                    <div id="headerlink">
-                                        <div class="jumppage">
-                                            <div class="medium">Go up</div>
-                                        </div>
-                                    </div>
-                                </a>
-                                <div class="verticalcenter">
-                                    <div class="big">Made with</div>
-                                    <div class="heart">♥</div>
-                                </div>
-                                <div id="footer">
-
-
-
-                                    <div class="construction1"></div>
-                                    <div class="footertext">
-                                        OnePageScroller.js by Pete R. || Page fade-in by Roko C.</div>
-                                </div>
-                            </div>
+                    <a onclick="document.getElementById('x2').click();">
+                        <div id="headerlinktop">
+                            <div class="medium">Go up</div>
                         </div>
-                        <div>
+                    </a>
+                    <div class="background3"></div>
+                    <div class="verticalcenter">
+
+
+
+                        <div class="verticalcenter">
+                            <div class="big">Made with</div>
+                            <div class="heart">♥</div>
                         </div>
                     </div>
+                    <div id="footer">
+
+
+
+                        <div class="construction1"></div>
+                        <div class="footertext">
+                            OnePageScroller.js by Pete R. || Page fade-in by Roko C.</div>
+                    </div>
+
                 </div>
+                <div>
+                </div>
+
             </section>
         </div>
 
