--- a/portable.html
+++ b/portable.html
@@ -97,7 +97,7 @@
 
     <div class="construction1"></div>
     <div class="footertext">
-        This is the mobile friendly version of this site. The desktop version doesn't work on smaller devices.</div>
+        This is the mobile friendly version of this site. Only works on mobile devices. Will glitch out on larger devices.</div>
 
 </div>
 
