--- a/portable.html
+++ b/portable.html
@@ -44,45 +44,110 @@
     <br>
     <br>
 
-    <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
-        <div class="child">
-            The Secret Diary
-            <br>Of
-            <br>Cameron Baum
-            <br>
-            <br>by Pjazz
-            <br>
-            <br> Status:
-            <div class="orange">In progress</div>
-        </div>
-    </a>
+                        <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
+                            <div class="child">
+                                The Secret Diary
+                                <br>Of Cameron Baum
+                                <br>
+                                <br>
+                                <br>by Pjazz
+                                <br>
+                                <br> Status:
+                                <div class="orange">In progress</div>
+                            </div>
+                        </a>
 
-    <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
-        <div class="child">
-            Born To
-            <br>Fight
-            <br>
-            <br>
-            <br>by River2027
-            <br>
-            <br> Status:
-            <div class="green">Completed</div>
-        </div>
-    </a>
+                        <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
+                            <div class="child">
+                                Born To Fight
+                                <br>
+                                <br>
+                                <br>
+                                <br>by River2027
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
 
 
-    <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
-        <div class="child">
-            I Love You
-            <br>Too
-            <br>
-            <br>
-            <br>by King Steve
-            <br>
-            <br> Status:
-            <div class="green">Completed</div>
-        </div>
-    </a>
+                        <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
+                            <div class="child">
+                                I Love You Too
+                                <br>
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
+                            <div class="child">
+                                Judgement's Dawn
+                                <br>
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/5065966/1/Century">
+                            <div class="child">
+                                Century
+                                <br>
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+                        <br>
+
+                        <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+                            <div class="child">
+                                Cameron Grows Up
+                                <br>
+                                <br>
+                                <br>
+                                <br>by ReaganKaseyFan
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+                            <div class="child">
+                                The Future Cameron
+                                <br>
+                                <br>
+                                <br>
+                                <br>by ReaganKaseyFan
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
+                            <div class="child">
+                                Searching for Serenity
+                                <br>
+                                <br>
+                                <br>by River2027
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
     <div class="medium"><br><br></div>
     <div class="seperator"></div>
     </div>
