--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jawe´s Archive</title>
 
     <script type="text/javascript" src="scripts/scroller.js"></script>
-        <script type="text/javascript" src="scripts/addition.js"></script>
+    <script type="text/javascript" src="scripts/addition.js"></script>
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="scripts/style.css">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -92,8 +92,8 @@
                         <a href="https://www.fanfiction.net/s/4450093/1/The-Secret-Diary-Of-Cameron-Baum">
                             <div class="child">
                                 The Secret Diary
-                                <br>Of
-                                <br>Cameron Baum
+                                <br>Of Cameron Baum
+                                <br>
                                 <br>
                                 <br>by Pjazz
                                 <br>
@@ -104,8 +104,8 @@
 
                         <a href="https://www.fanfiction.net/s/4988947/1/Born-to-Fight">
                             <div class="child">
-                                Born To
-                                <br>Fight
+                                Born To Fight
+                                <br>
                                 <br>
                                 <br>
                                 <br>by River2027
@@ -118,8 +118,8 @@
 
                         <a href="https://www.fanfiction.net/s/6563270/1/I-Love-You-Too">
                             <div class="child">
-                                I Love You
-                                <br>Too
+                                I Love You Too
+                                <br>
                                 <br>
                                 <br>
                                 <br>by King Steve
@@ -128,7 +128,76 @@
                                 <div class="green">Completed</div>
                             </div>
                         </a>
+
+                        <a href="https://www.fanfiction.net/s/4411569/1/Judgement-s-Dawn">
+                            <div class="child">
+                                Judgement's Dawn
+                                <br>
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/5065966/1/Century">
+                            <div class="child">
+                                Century
+                                <br>
+                                <br>
+                                <br>
+                                <br>by King Steve
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+                        <br>
+
+                        <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
+                            <div class="child">
+                                Cameron Grows Up
+                                <br>
+                                <br>
+                                <br>
+                                <br>by ReaganKaseyFan
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
+                            <div class="child">
+                                The Future Cameron
+                                <br>
+                                <br>
+                                <br>
+                                <br>by ReaganKaseyFan
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+                        <a href="https://www.fanfiction.net/s/6179677/1/Terminator-Searching-for-Serenity">
+                            <div class="child">
+                                Searching for Serenity
+                                <br>
+                                <br>
+                                <br>by River2027
+                                <br>
+                                <br> Status:
+                                <div class="green">Completed</div>
+                            </div>
+                        </a>
+
+
                     </div>
+
+
                     <a onclick="document.getElementById('x3').click();">
                         <div id="footerlink">
                             <div class="jumppage">
@@ -155,7 +224,7 @@
 
                         <div class="verticalcenter">
                             <div class="big">Made with</div>
-                            
+
                             <div class="heart">♥</div>
                         </div>
                     </div>
