--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <br>Of Cameron Baum
                                 <br>
                                 <br>
-                                <br>by Pjazz
+                                <br>Pjazz
                                 <br>
                                 <br> Status:
                                 <div class="orange">In progress</div>
@@ -108,7 +108,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <br>by River2027
+                                <br>River2027
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -122,7 +122,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <br>by King Steve
+                                <br>King Steve
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -134,8 +134,7 @@
                                 Judgement's Dawn
                                 <br>
                                 <br>
-                                <br>
-                                <br>by King Steve
+                                <br>King Steve
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -148,7 +147,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <br>by King Steve
+                                <br>King Steve
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -159,10 +158,10 @@
                         <a href="https://www.fanfiction.net/s/11319179/1/Cameron-Grows-Up">
                             <div class="child">
                                 Cameron Grows Up
+
                                 <br>
                                 <br>
-                                <br>
-                                <br>by ReaganKaseyFan
+                                <br>ReaganKaseyFan
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -172,10 +171,10 @@
                         <a href="https://www.fanfiction.net/s/11347885/1/The-Future-Cameron">
                             <div class="child">
                                 The Future Cameron
+
                                 <br>
                                 <br>
-                                <br>
-                                <br>by ReaganKaseyFan
+                                <br>ReaganKaseyFan
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
@@ -187,7 +186,7 @@
                                 Searching for Serenity
                                 <br>
                                 <br>
-                                <br>by River2027
+                                <br>River2027
                                 <br>
                                 <br> Status:
                                 <div class="green">Completed</div>
